--- a/ProjetIfRoutard/nbproject/project.properties
+++ b/ProjetIfRoutard/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.opencsv-2.3.jar=C:\\Documents and Settings\\Administrateur\\Bureau\\Projets\\util\\opencsv-2.3.jar
+file.reference.opencsv-2.3.jar-1=/Users/KEV/Downloads/Projets/util/opencsv-2.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -36,7 +37,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.opencsv-2.3.jar}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.opencsv-2.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
