ingore persistance.xml

--- a/ProjetIfRoutard/nbproject/project.properties
+++ b/ProjetIfRoutard/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=
 excludes=
 file.reference.opencsv-2.3.jar=C:\\Documents and Settings\\Administrateur\\Bureau\\Projets\\util\\opencsv-2.3.jar
 file.reference.opencsv-2.3.jar-1=/Users/KEV/Downloads/Projets/util/opencsv-2.3.jar
+file.reference.opencsv-2.3.jar-2=C:\\Users\\Ordi\\Desktop\\INSA\\3IF\\TP_DASI\\DASI-master\\Projets\\util\\opencsv-2.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -38,7 +39,8 @@ javac.classpath=\
     ${file.reference.opencsv-2.3.jar-1}:\
     ${file.reference.opencsv-2.3.jar}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.opencsv-2.3.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
