--- a/ProjetIfRoutard/nbproject/project.properties
+++ b/ProjetIfRoutard/nbproject/project.properties
@@ -37,10 +37,10 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.opencsv-2.3.jar-1}:\
+    ${file.reference.opencsv-2.3.jar-2}:\
     ${file.reference.opencsv-2.3.jar}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.opencsv-2.3.jar-2}
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
